# gemtools-io

./: README.md  pyproject.toml  requirements.txt
doc/: 10_general.md
src/gemtools_io/: __init__.py  tools.py
src/gemtoolsio/: __init__.py  __main__.py  tools.py
tests/: test_no_encryption.py  test_with_encryption.py
