[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemtools_io"
version = "0.0.1"
authors = [
    { name = "Robin LIORET", email = "robin.lioret@capgemini.com" }
]
description = "A Generic Managment Tool package that helps with the file loading, saving and encryption."
readme = "README.md"
requires-python = ">=3.9"
classifiers  = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

#[project.urls]
#"Homepage" = ""
#"Bug Tracker" = ""